# TASK1

Client/: AScreenshot.cpp  AScreenshot.h  CMakeLists.txt  IConnectionManager.h  main.cpp
Client/lin/: LINConnectionManager.cpp  LINConnectionManager.h  LINScreenshot.cpp  LINScreenshot.h
Client/win/: Bitmap.cpp  Bitmap.h  WINConnectionManager.cpp  WINConnectionManager.h  WINScreenshot.cpp  WINScreenshot.h
Server/: CMakeLists.txt  IServer.h  Info.cpp  Info.h  main.cpp
Server/lin/: LINServer.cpp  LINServer.h
Server/win/: WINServer.cpp  WINServer.h
